# haxgent

./: .env.example  .gitignore  Cargo.toml  README.md  main.ts  run.sh
chat/: base-chat-service.ts  chat-service.interface.ts  chat.dto.ts  ollama-chat.service.ts  openai-chat.service.ts
chat_rust/: Cargo.toml
chat_rust/src/: lib.rs
model_chat/: Cargo.toml  README.md
model_chat/src/: lib.rs  main.rs
src/: logger.rs  tools.rs
ui/: Cargo.toml
ui/src/: logger.rs  main.rs  tools.rs
