[package]
name = "ui"
version = "0.3.1"
edition = "2021"

[dependencies]
ratatui = "0.24.0"
crossterm = "0.27.0"
anyhow = "1.0"
chrono = "0.4.39"
uuid = { version = "1.6.1", features = ["v4"] }
crossbeam-channel = "0.5"
reqwest = "0.12.12"
tokio = "1.43.0"
serde = "1.0.217"
serde_json = "1.0.137"
async-trait = "0.1.85"
dotenv = "0.15.0"
chat_rust = { path = "./model_chat" }
